# eyes3scribe

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  _README.md  bash-auto-doc.code-workspace  callgraph.gv  cookiecutter-config-file.yml  create_emerge_graph.sh  create_pycallgraph.sh  create_pydeps_graph.sh  deepsource_pytest.sh  delme.html  emerge_config.yaml  gen_mkdocs_site.py  history_module.sh  index.md  launcher.py  macro_site_builder.sh  make_mkdocs_site.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_noversion.txt  requirements_old.txt  scrap.py  scrap_toc.py  scrapper02.py  scrapper03.py  scrapper04.py  templates.info
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  greetings.yml  pr.yml  publish.yml  release-drafter.yml  test-python-app.yml
_make/: gen_reposecrets.sh  mod_github_settings.py  mod_reposettings.sh  upload_repo_secret.py
autodocumatix/: DocSectionWriterFunction.py  FunctionDependencyProcessor.py  cite_parameter.py  function_call_tree.py  function_dependency_processor.py  main.py  shell_2md_file_writer.py  shell_src_preprocessor.py
autodocumatix/helpo/: hfile.py  hstrops.py
bashautodoc/: DocSectionWriterFunction.py  __init__.py  config.py  create_handwritten_docs.py  function_call_tree.py  function_dependency_processor.py  gen_handwritten_docs.py  gen_hwdocs.py  gen_mkdocs_nav_bar.py  gen_mkdocs_site_yaml.py  gen_navbar_dict.py  md_toc2_yaml_processor.py  pipeline_rst2md.py  regex_patterns.py  rst_and_md2md_file_writer.py  setup_docs_project.py  shell_2md_file_writer.py  shell_src_preprocessor.py
bashautodoc/helpo/: hfile.py  hfilepath_datahandler.py  hfunction_datahandler.py  hstrops.py  hsubprocess.py
bashautodoc/models/: filepath_datahandler.py  function_datahandler.py  mdfile_datahandler.py  ref_anchor_converter.py  rst2md_converter_anchors.py  rst2md_converter_triple_colonic_bypass.py  rst2md_converter_triple_colons.py  rst2md_datahandler.py
config/: bash_it_site.yaml  bashrc_stablecaps.yaml  rst2myst_configfile.yaml  test.md  test.rst
custom_assets/custom_css/: admonitions.css
docker/: README.md
docs/: SECURITY.md  milestones.md
docs_stablecaps_bashrc/: mkdocs.yml
docs_stablecaps_bashrc/site/: 404.html  index.html  search.html  sitemap.xml
docs_stablecaps_bashrc/site/search/: search_index.json
eyes3scribe/: DocSectionWriterFunction.py  __init__.py  config.py  function_dependency_processor.py  gen_handwritten_docs.py  gen_mkdocs_nav_bar.py  gen_navbar_dict.py  gen_pynavbar_dict.py  pipeline_rst2md.py  regex_patterns.py  setup_docs_project.py  shell_2md_file_writer.py  shell_src_preprocessor.py
eyes3scribe/helpo/: coloured_log_formatter.py  hcollections.py  hdatetime.py  hfile.py  hstrops.py  hsubprocess.py
eyes3scribe/helpo/old/: hfile.py  hstrops.py  hsubprocess.py
eyes3scribe/models/: __init__.py  filepath_datahandler.py  function_datahandler.py  mdfile_datahandler.py  rst2md_converter_triple_colonic_bypass.py  rst2md_datahandler.py
eyes3scribe/rst2md_converters/: r2m_anchors_end_step1.py  r2m_anchors_start_step2.py  r2m_triple_colonic_bypass.py  rst2md_converter_anchors.py
gbm-docs/aliases/: apt_aliases.md  docker-compose_aliases.md  docker_aliases.md  kubectl_aliases.md  terraform_aliases.md
gbm-docs/completion/: awscli_completion.md  docker_completion.md
gbm-docs/internal/: _unused_scrap_functions.md  internal_colour_defs.md  internal_colour_functions.md  internal_helper_functions.md
gbm-docs/modules/: base_module.md  docker-compose_module.md  docker_module.md  extract.md  history_module.md  installer_module.md  ssh-agent_module.md  ssh_helper_module.md
gbm-docs/undef/: theme_settings.md
images/: callgraph.gv
mkdocs_sys_bashrc/: mkdocs.yml
mkdocs_sys_bashrc/docs/aliases/: _core-bash_aliases.md  apt_aliases.md  docker-compose_aliases.md  git_aliases.md
mkdocs_sys_bashrc/docs/completion/: docker-compose_completion.md  git_completion.md  terraform_completion.md
mkdocs_sys_bashrc/docs/internal/: internal_colour_functions.md  internal_exa_wrapper.md  internal_git_functions.md  internal_helper_functions.md  internal_ls_colors_defs.md
mkdocs_sys_bashrc/docs/modules/: aws_module.md  composure.md  docker_module.md  extract.md  git_module.md  history_module.md
mkdocs_sys_bashrc/site/: index.html  sitemap.xml
mkdocs_sys_bashrc/site/search/: search_index.json
old_src/: main.py
output-docs/aliases/: _core-bash_aliases.md  apt_aliases.md  docker-compose_aliases.md  docker_aliases.md  git_aliases.md  kubectl_aliases.md  terraform_aliases.md
output-docs/completion/: awscli_completion.md  docker-compose_completion.md  docker_completion.md  git_completion.md  terraform_completion.md
output-docs/internal/: _unused_scrap_functions.md  internal_colour_defs.md  internal_colour_functions.md  internal_exa_wrapper.md  internal_git_functions.md  internal_helper_functions.md  internal_ls_colors_defs.md
output-docs/modules/: aws_module.md  base_module.md  composure.md  docker-compose_module.md  docker_module.md  extract.md  git_module.md  history_module.md  installer_module.md  ssh-agent_module.md  ssh_helper_module.md
output-docs/undef/: theme_settings.md
scrap_code/: datadump.py  delme..py  delme2.py  scrap_toc.py  scrapper02.py  scrapper03.py  scrapper04.py
src/: cite_parameter.py  helpers.py  main.py
src/helpo/: hfile.py  hstrops.py
stablecaps/autographilliaz/: README.md
stablecaps/autographilliaz/ghrs-data/: views_clones_aggregate.csv
stablecaps/autographilliaz/latest-report/: report.html  report.md  report_for_pdf.html
stablecaps/bash-auto-doc/: README.md
stablecaps/bash-auto-doc/ghrs-data/: views_clones_aggregate.csv
stablecaps/bash-auto-documatix/: README.md
stablecaps/eyes3scribe/: README.md
tests/: data_function_dependecy_processor.py  test_function_dependecy_processor.py  test_hfile.py  test_hstrops.py
zsdoc/: history_module.sh.adoc
zsdoc/data/: call_tree.zsd  rev_call_tree.zsd
(+490 files in other folders)
