[tool.poetry]
name = "bashautodoc"
version = "0.1.0"
description = "Automatically creates HTML documentation files for BASH/Shell source code using markdown & python mkdocs"
authors = ["Darkpandarts <114529342+darkpandarts@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"
# packages = [{ include = "gen_mkdocs_site.py" }, {include = "bashautodoc/**/*.py", from = "bashautodoc"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.7"
ghp-import = "2.1.0"
importlib-metadata = "7.0.0"
jinja2 = "3.1.2"
markdown = "3.5.1"
markupsafe = "2.1.3"
mdurl = "0.1.2"
mdutils = "1.6.0"
mergedeep = "1.3.4"
mkdocs = "1.5.3"
mkdocs-windmill-dark = "0.2.0"
packaging = "23.2"
pathspec = "0.11.2"
platformdirs = "4.1.0"
pygments = "2.17.2"
python-dateutil = "2.8.2"
pyyaml-env-tag = "0.1"
rich = "13.7.0"
six = "1.16.0"
watchdog = "3.0.0"
zipp = "3.17.0"
mkdocstrings = {extras = ["crystal", "python", "shell"], version = "^0.24.0"}
mkdocs-material = "^9.4.14"
ruamel-yaml = "^0.18.5"
mkdocs-ivory = "^0.4.6"
mkdocs-dracula-theme = "^1.0.5"
markdown-it-py = "v2.2.0"
rst-to-myst = {extras = ["sphinx"], version = "^0.4.0"}
sentry-sdk = "^1.39.1"
dotmap = "^1.3.30"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "23.11.0"
click = "8.1.7"
code2flow = "2.5.1"
exceptiongroup = "1.2.0"
iniconfig = "2.0.0"
mypy-extensions = "1.0.0"
packaging = "23.2"
pathspec = "0.11.2"
platformdirs = "4.1.0"
pluggy = "1.3.0"
pytest = "7.4.3"
tomli = "2.0.1"
typing-extensions = "4.8.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
